@@ -1387,6 +1387,7 @@ usage() # $1 = exit status
     echo "   show [ -m ] log"
     echo "   show macros"
     echo "   show [ -x ] mangle|nat|raw|routing"
+    echo "   show policies"
     echo "   show tc"
     echo "   show vardir"
     echo "   show zones"
