@@ -507,6 +507,18 @@
 
       <arg choice="plain"><option>show</option></arg>
 
+      <arg choice="plain"><option>policies</option></arg>
+    </cmdsynopsis>
+
+    <cmdsynopsis>
+      <command>shorewall</command>
+
+      <arg choice="opt"><option>trace</option>|<option>debug</option></arg>
+
+      <arg>-<replaceable>options</replaceable></arg>
+
+      <arg choice="plain"><option>show</option></arg>
+
       <arg choice="plain"><option>tc</option></arg>
     </cmdsynopsis>
 
@@ -1269,6 +1281,15 @@
                 through to iptables and causes actual packet and byte counts
                 to be displayed. Without this option, those counts are
                 abbreviated.</para>
+              </listitem>
+            </varlistentry>
+
+            <varlistentry>
+              <term><emphasis role="bold">policies</emphasis></term>
+
+              <listitem>
+                <para>Added in Shorewall 4.4.4. Displays the applicable policy
+                between each pair of zones.</para>
               </listitem>
             </varlistentry>
 
