@@ -14,6 +14,8 @@ Changes in Shorewall 4.4.4
 
 7)  Suppress duplicate COMMENT warnings.
 
+8)  Implement 'show policies' command.
+
 Changes in Shorewall 4.4.3
 
 1)  Move Debian INITLOG initialization to /etc/default/shorewall
